Change log for zeit.web
=======================

PREDEPLOY
---------

- Set `asset_prefix` to `https://static.zeit.de/static/{version}` and `jsconf_prefix` to `https://static.zeit.de/static/js` in the settings of all production sites.


POSTDEPLOY
----------

- remove `iqd_tablet_transformation` feature toggle from Vivis XML

- remove `framebuilder_ssl_asset_prefix` setting from Vivis XML


3.144 (unreleased)
------------------

- ZON-4609: Do not index comment-paginated pages in Ligatus

- ZON-4434: Transmit article genre to webtrekk

- SSL-205: Load all assets from https://static.zeit.de

- BUG-897: Adjust tablet viewport on all verticals


3.143.1 (2018-04-18)
--------------------

- FIX: Ensure ensure_division is called before we interact with the
  article body, for all possible code paths


3.143 (2018-04-17)
------------------

- ZON-4532: Remove zeit.intrafind and the zeit.retresco.tms featuretoggle

- SSL-215: Rewrite certain URLs in RAW


3.142 (2018-04-16)
------------------

- ZON-4508: Force images on zplus-abo teaser in mobile view

- ZON-4580: Remove additional liveblog header layout

- ZON-4582: Implement exclusion for article body ads

- BUG-891: Fix print button on advertorials

- BUG-893: Clear floating advertisements before fullwidth block content

- MAINT: Remove obsolete route config for `/health_check`

- MAINT: Move 'transform_to_secure_links_for' setting to web-settings


3.141 (2018-04-12)
------------------

- SSL-206: Implement protocol neutrality on configured hosts

- MAINT: Replace `togglepatch` fixture by built-in override functionality from 8fe69a5


3.140 (2018-04-12)
------------------

- ZON-4583: Ligatus Enhancements

- TMS-203: Migrate lineage to elasticsearch (toggle `elasticsearch_lineage`)

- SSL-201: Use correct community host setting to create links to userprofile

- SSL-198: Switch to ssl asset host for css loading


3.139 (2018-04-09)
------------------

- ZON-4558: Make ZMO article pagination more core-ish
